Implement suggested changes (see commit message)
* 'Section X' changed to 'Title X section Y'
* Reorder some imports
* Add source_url field (readonly) for future reference
* Update tests to account for new field

--- a/solution/backend/regulations/templates/admin/conversions_imported.html
+++ b/solution/backend/regulations/templates/admin/conversions_imported.html
@@ -6,7 +6,7 @@
         <p>The following Statute Link Conversions have been imported:</p>
         <ul>
         {% for c in conversions %}
-            <li>{{ c.act }} section {{ c.section }} → {{ c.title }} USC {{ c.usc }}</li>
+            <li>{{ c.act }} &mdash; title {{ c.title }} section {{ c.section }} → {{ c.title }} USC {{ c.usc }}</li>
         {% endfor %}
         </ul>
 
