--- a/solution/ui/regulations/css/scss/main.scss
+++ b/solution/ui/regulations/css/scss/main.scss
@@ -23,6 +23,7 @@ $eregs-image-path: "../images" !default;
 @import 'layout';
 @import "partials/typography";
 @import "partials/site_homepage";
+@import "partials/_site_homepage_update.scss";
 @import "partials/search";
 @import "partials/compare";
 @import "partials/flash_banner";
