--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -51,7 +51,9 @@ $darkest_blue: #102e43;
 $dark_blue: #17415f;
 $mid_dark_blue: #205982;
 $mid_blue: #046791;
+$mid_blue_2: #254c68;
 $light_blue: #a3e8ff;
+$light_blue_2: #ccf2ff;
 $lighter_blue: #ddf5fd;
 $lightest_blue: #eefafe;
 $pale_blue: #c5def0;
@@ -100,6 +102,8 @@ $secondary_reverse_link_color: $white;
 $secondary_reverse_link_hover: $light_blue;
 
 $visited_link_color: $magenta;
+
+$secondary_toc_link_color: $light_blue_2;
 
 // Forms
 
