--- a/solution/ui/regulations/css/scss/partials/_sidebar_left.scss
+++ b/solution/ui/regulations/css/scss/partials/_sidebar_left.scss
@@ -129,7 +129,7 @@ aside.left-sidebar {
 
         background: none;
         border: none;
-        color: #CCF2FF;;
+        color: #CCF2FF;
         cursor: pointer;
         display: flex;
         justify-content: center;
@@ -262,7 +262,7 @@ aside.left-sidebar {
 
     button {
         outline: none;
-        color: #CCF2FF;;
+        color: #CCF2FF;
         border: none;
         background: none;
         cursor: pointer;
