feat: watch screen width a bit better

--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -13,9 +13,18 @@
         background-color: $dark_blue;
 
         @mixin hover-background {
-            &:hover, &:focus {
+            &:hover,
+            &:focus {
                 background-color: $mid_blue;
             }
+        }
+
+        &.open {
+            width: 400px;
+        }
+
+        &.closed {
+            width: 75px;
         }
 
         .nav-toggle__button {
@@ -60,7 +69,6 @@
                 text-transform: capitalize;
                 letter-spacing: normal;
             }
-
         }
     }
 }
