--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -5,6 +5,11 @@
 .site-homepage--update {
     main {
         display: flex;
+        flex-direction: row;
+
+        @media (max-width: $mobile-max) {
+            flex-direction: column;
+        }
     }
 
     nav {
@@ -19,12 +24,27 @@
             }
         }
 
+        @media (max-width: $mobile-max) {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+        }
+
         &.open {
             width: 400px;
+
+            @media (max-width: $mobile-max) {
+                width: 100%;
+            }
         }
 
         &.closed {
             width: 75px;
+
+            @media (max-width: $mobile-max) {
+                width: 100%;
+                height: 45px;
+            }
         }
 
         .nav-toggle__button {
@@ -40,6 +60,13 @@
             &.icon-only {
                 background-color: $dark_blue;
 
+                @media (max-width: $mobile-max) {
+                    position: relative;
+                    top: unset;
+                    right: unset;
+                    margin-left: 4px;
+                }
+
                 i {
                     background-color: $mid_blue_2;
                     border-radius: 4px;
@@ -49,6 +76,10 @@
 
                     &.nav-toggle__button--hovered {
                         background-color: $mid_blue;
+                    }
+
+                    @media (max-width: $mobile-max) {
+                        font-size: 32px;
                     }
                 }
             }
@@ -61,13 +92,22 @@
 
             .v-btn__content {
                 opacity: 1 !important;
+
+                i {
+                    transition: none;
+                }
             }
 
-            .nav-toggle__button--label {
+            &--label {
+                color: white;
                 font-size: 14px;
                 font-weight: 700;
                 text-transform: capitalize;
                 letter-spacing: normal;
+
+                @media (max-width: $mobile-max) {
+                    font-size: 16px;
+                }
             }
         }
     }
