--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -198,12 +198,17 @@ $eds-width-sm: 780px;
 $eds-width-md: 1024px;
 $eds-width-lg: 1200px;
 
+$eds-xs-max: $eds-width-sm - 1; // 779px
+$eds-sm-max: $eds-width-md - 1; // 1023px
+$eds-md-max: $eds-width-lg - 1; // 1199px
+
 // Uses CMS Design System + a larger screen size
 
 // Custom maxes
-$tablet-max: $width-lg - 1; // 1023px
-$mobile-max: $width-md - 1; // 767px
 $iphoneSE-max: $width-xs - 1; // 374px
+$mobile-max: $width-md - 1; // 767px
+$tablet-max: $width-lg - 1; // 1023px
+
 $hero-tablet-max: 1080px;
 
 $width-xxs: 320px;
