--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -7,7 +7,7 @@
         display: flex;
         flex-direction: row;
 
-        @media (max-width: $mobile-max) {
+        @media (max-width: $eds-xs-max) {
             flex-direction: column;
         }
     }
@@ -24,7 +24,7 @@
             }
         }
 
-        @media (max-width: $mobile-max) {
+        @media (max-width: $eds-xs-max) {
             display: flex;
             align-items: center;
             justify-content: flex-start;
@@ -33,7 +33,7 @@
         &.open {
             width: 400px;
 
-            @media (max-width: $mobile-max) {
+            @media (max-width: $eds-xs-max) {
                 width: 100%;
             }
         }
@@ -41,7 +41,7 @@
         &.closed {
             width: 75px;
 
-            @media (max-width: $mobile-max) {
+            @media (max-width: $eds-xs-max) {
                 width: 100%;
                 height: 45px;
             }
@@ -60,7 +60,7 @@
             &.icon-only {
                 background-color: $dark_blue;
 
-                @media (max-width: $mobile-max) {
+                @media (max-width: $eds-xs-max) {
                     position: relative;
                     top: unset;
                     right: unset;
@@ -78,7 +78,7 @@
                         background-color: $mid_blue;
                     }
 
-                    @media (max-width: $mobile-max) {
+                    @media (max-width: $eds-xs-max) {
                         font-size: 32px;
                     }
                 }
@@ -105,7 +105,7 @@
                 text-transform: capitalize;
                 letter-spacing: normal;
 
-                @media (max-width: $mobile-max) {
+                @media (max-width: $eds-xs-max) {
                     font-size: 16px;
                 }
             }
