--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -260,6 +260,7 @@ header {
                                 .header--links__anchor {
                                     @include header__anchor--bold;
 
+                                    color: $mid_blue;
                                     line-height: 24px;
                                     padding: 0 12px;
                                     text-decoration: none;
