chore: minor cleanup to move on to next step

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -45,10 +45,8 @@
                 {% for title in structure %}
                     <div class="toc-title-container">
                         <h1> {{title.label}} </h1>
+                        {{ title.identifier }}
 
-                        {% for child in title.children %}
-                            {% render_nested "regulations/homepage/"|add:child.type|add:".html" "regulations/homepage/child.html" context=child API_BASE=API_BASE title=title.identifier.0 %}
-                        {% endfor %}
                     </div>
                 {% endfor %}
 
