Fix refs not linking in special text

--- a/solution/backend/regulations/templates/regulations/partials/node_types/FlushParagraph.html
+++ b/solution/backend/regulations/templates/regulations/partials/node_types/FlushParagraph.html
@@ -1,5 +1,7 @@
+{% load link_statutes %}
+
 <section class="flush-paragraph-section">
     <fp>
-        {{ node.content | safe }}
+        {{ node.content | link_statutes:link_conversions | safe }}
     </fp>
 </section>
