--- a/solution/backend/regulations/templates/regulations/partials/node_types/default.html
+++ b/solution/backend/regulations/templates/regulations/partials/node_types/default.html
@@ -1,5 +1,7 @@
+{% load link_statutes %}
+
 <section>
-    {{node.content | safe}}
+    {{node.content | link_statutes:link_conversions | safe}}
 </section>
 
 {% for node in node.children %}
