feat: get titles ant TOCs in TocContainer

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -41,6 +41,7 @@
     <main>
         <left-nav-collapse>
             <toc-container
+                slot="nav-contents"
                 api-url="{{ API_BASE }}"
             ></toc-container>
         </left-nav-collapse>
