feat: part links working

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -43,6 +43,7 @@
             <toc-container
                 slot="nav-contents"
                 api-url="{{ API_BASE }}"
+                home-url="{% url 'homepage' %}"
             ></toc-container>
         </left-nav-collapse>
         <div class="site-container homepage-main-content" id="main-content">
