feat: add aria label to icon btn

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -39,7 +39,7 @@
 
 {% block body %}
     <main>
-        <left-nav-collapse>
+        <left-nav-collapse contents-description="table of contents">
             <toc-container
                 slot="nav-contents"
                 api-url="{{ API_BASE }}"
