--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -1,1 +1,63 @@
-<h1>Hello world</h1>
+{% extends "regulations/base.html" %}
+{% load static %}
+{% load render_nested %}
+
+{% block title %}Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project{% endblock %}
+
+{% block spa_styles %}
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+{% endblock %}
+
+{% block body_class %}site-homepage--update{% endblock %}
+
+{% block pre_header %}
+    <a class="ds-c-skip-nav" href="#main-content">Skip to main content</a>
+{% endblock %}
+
+{% block header %}
+    <header id="header" class="sticky">
+        <header-component
+            home-url="{% url 'homepage' %}"
+        >
+            <jump-to
+                slot="jump-to"
+                api-url="{{ API_BASE }}"
+                home-url="{% url 'homepage' %}"
+            ></jump-to>
+            <header-links
+                slot="links"
+                about-url="{% url 'about' %}"
+                resources-url="{% url 'resources' %}"
+            ></header-links>
+            <header-search
+                slot="search"
+                search-url="{% url 'search' %}"
+            ></header-search>
+        </header-component>
+    </header>
+{% endblock %}
+
+{% block body %}
+    <main>
+        <left-nav-collapse contents-description="table of contents">
+            <toc-container
+                slot="nav-contents"
+                api-url="{{ API_BASE }}"
+                home-url="{% url 'homepage' %}"
+            ></toc-container>
+        </left-nav-collapse>
+        <div class="site-container homepage-main-content" id="main-content">
+        </div>
+        <aside class="homepage-updates ds-l-col--4">
+            {% if regulations %}
+                {% include "regulations/partials/recent_changes.html" %}
+            {% endif %}
+        </aside>
+    </main>
+
+{% endblock %}
+
+{% block post_footer %}
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
+    <script src="{% static '/js/eregs-main.iife.js' %}"></script>
+{% endblock %}
