--- a/solution/ui/regulations/css/scss/partials/_search.scss
+++ b/solution/ui/regulations/css/scss/partials/_search.scss
@@ -117,7 +117,7 @@
                     }
 
                     .title__span, .section-sign, .pipe-separator {
-                        color: #000;
+                        color: $mid_gray;
                         font-size: 14px;
                     }
 
