--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -39,6 +39,7 @@
 
 {% block body %}
     <main>
+        <nav class="placeholder"></nav>
         <left-nav-collapse contents-description="table of contents">
             <toc-container
                 slot="nav-contents"
@@ -47,12 +48,21 @@
             ></toc-container>
         </left-nav-collapse>
         <div class="site-container homepage-main-content" id="main-content">
+            <div class="cta-container">
+                <div class="video-container">
+                    <a href="https://www.youtube.com/watch?v=R0U-O7f53kg" target="_blank">
+                        <img src="{% static 'images/home_video.png' %}" alt="Woman reading Part 435 Subpart J on the Medicaid & CHIP eRegulations website" />
+                    </a>
+                </div>
+                <div class="about-text-container">
+                    <span>eRegulations organizes together regulations, subregulatory guidance, and other related policy materials.</span>
+                </div>
+            </div>
+            <div class="resources-container">
+                <div class="rules-guidance-container"></div>
+                <div class="search-description-container"></div>
+            </div>
         </div>
-        <aside class="homepage-updates ds-l-col--4">
-            {% if regulations %}
-                {% include "regulations/partials/recent_changes.html" %}
-            {% endif %}
-        </aside>
     </main>
 
 {% endblock %}
