feat: replace placeholder nav with Vue component on mounted

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -39,7 +39,7 @@
 
 {% block body %}
     <main>
-        <nav class="placeholder"></nav>
+        <nav id="placeholderNav"></nav>
         <left-nav-collapse contents-description="table of contents">
             <toc-container
                 slot="nav-contents"
