--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -61,7 +61,7 @@
             }
         }
 
-        &.placeholder {
+        &#placeholderNav {
             background: red;
             min-height: 10px;
 
